remove header udpate

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -22,7 +22,7 @@
 <body class="site">
 	<header>
 		<div class="header-inner">
-			<h1>Mac Mart Responsive Pattern Lib.</h1>
+			<h1>Responsive Pattern Lib.</h1>
 		</div>
 	</header>
 
